# KS54-bot-navigation

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  RUNBOOK.md  alembic.ini  deploy.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: a29d64643ce3_initial.py  c8f3a2b1d9e5_add_telegram_user_id_and_pd_consents.py  f7e8d9c0b1a2_add_status_field.py  g2h4i6j8k0l1_add_telegram_users_policy_flag.py  h3k5m7n9p0q1_broadcast_recovery_jobs.py  j5k6l7m8n9p0_add_telegram_users_is_admin.py  j6k8l0m2n4p5_add_bot_content_table.py  k7l8m9n0p1q2_add_saved_profile_fields.py
docs/: PRODUCTION_READINESS_AUDIT.md
monitoring/: prometheus.yml
scripts/: backup_db.sh  restore_db.sh  setup_prod_env.sh
src/: main.py
src/api/: __init__.py  fastapi_app.py
src/application/: __init__.py  content_service.py  keyboard_builder.py
src/config/: content.py  settings.py
src/data/: admission_repository.py  database.py  models.py  screens.csv  session_scope.py  user_repository.py
src/infrastructure/: kafka_enrollment.py
src/logic/: __init__.py
src/middlewares/: access_control.py  policy_pdn_consent.py  throttling.py
src/monitoring/: __init__.py  docker_healthcheck.py  health_checks.py  health_server.py  metrics.py  telegram_log_alerts.py  watchdog_job.py
src/utils/: pii.py  (+7 more)
tests/: conftest.py  test_admission_repository.py  test_broadcast_throttle.py  test_contact_validation.py  test_handlers_start_help.py  test_pii.py  test_telegram_log_alerts.py
(+32 files in other folders)
