[project]
name = "college-bot"
version = "0.0.0"
description = "Telegram college admission bot (aiogram 3)"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
# Единый лимит для E501 и formatter: длинные русские строки и миграции.
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
